# UltraEval-Audio

./: .gitignore  FAQ.md  README.md  README_en.md  README_zh.md  Untitled-1.py  extract_error.py  inspect_excel.py  pyproject.toml  requirements.txt  requirments.txt  setup_vllm.sh  tmp.py  tmp_.py  translate.py  translate_llmcenter.py  translate_self.py
assets/: leaderboard.md
audio_evals/: base.py  constants.py  eval_task.py  isolate.py  main.py  recorder.py  registry.py  utils.py
audio_evals/agg/: base.py  instruct_tts_eval.py  sp.py
audio_evals/dataset/: dataset.py  giga.py  huggingface.py  instruct_tts_eval.py  minimax_tts.py  resume.py  seed_tts_eval.py
audio_evals/evaluator/: alpaca_eval.py  asr_wer.py  base.py  bbh.py  choices.py  cv3_emotion.py  dict_match.py  dnsmos.py  ensemble.py  harm.py  ifeval.py  instruct_tts_eval.py  instruct_tts_eval_prompt.txt  long_tts_eval_asr_wer.py  mcq.py  qa_eval.py  qa_exact_match.py  ref_qa_geval.py  ref_qa_geval.txt  rtf.py  seed_tts_eval_asr_wer.py  simo.py  utmos.py  voice_bench.py  wer.py
audio_evals/lib/: chattts.py  sensevoicelib.py  (+2 more)
cli/: list_availabel.py
docs/: Procedures for Restarting an Incomplete Evaluation.md  how add a dataset.md  how launch a custom eval task.md  how use UTMOS, DNSMOS eval speech quality.md  seed-tts-eval4voice_clone.md
replication/: CosyVoice2.md  CosyVoice3.md  GLM-TTS.md  IndexTTS2.md  InstructTTSEval.md  Long-TTS-Eval.md  MGM-Omni.md  VoxCPM.md  fishaudio-s2-pro.md  kimi-audio.md  qwen3_asr.md  qwen3_omni.md  qwen3_tts.md  step-audio-r1_1.md
requirments/: minicpm_o2_6.txt
(+596 files in other folders)
